2.3/2.3-fixed/k8s-project/service-todo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 3000
