2.3/2.3-fixed/k8s-project/service-todo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  selector:
    app: todo-backend
  ports:
    - port: 80
      targetPort: 3000
